--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,307 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600&display=swap');
+*,
+*::before,
+*::after {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  border: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+}
+ul,
+ol,
+li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: inherit;
+  font-size: inherit;
+}
+
+html,
+body {
+  background: rgb(238, 227, 251);
+  color: #666666;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+/*FORMA */
+
+.form__app {
+  display: flex;
+  justify-content: center;
+}
+
+.form__container {
+  width: 760px;
+  padding: 96px 98px 92px 98px;
+  background: #ffffff;
+}
+
+.form__box {
+  margin-bottom: 32px;
+  position: relative;
+}
+.error__message {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #666666;
+  position: absolute;
+  bottom: -20px;
+  left: 0px;
+}
+
+.text__intut-error {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #eb5757;
+  position: absolute;
+  bottom: -20px;
+  left: 0px;
+}
+
+.form__box:last-of-type {
+  margin-bottom: 58px;
+}
+
+.form__label,
+.select__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 18px;
+  color: #666666;
+  margin-bottom: 8px;
+}
+
+.form__input {
+  width: 564px;
+  height: 56px;
+  background: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 8px;
+  padding: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #666666;
+}
+
+.form__checkbox,
+.form__radio,
+.form__toogle {
+  margin-bottom: 32px;
+}
+.form__checkbox {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox__label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #666666;
+}
+
+.checkbox-wrapper {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  width: 22px;
+  height: 22px;
+}
+
+.checkbox-wrapper + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+}
+.checkbox-wrapper + label::before {
+  content: '';
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #cccccc;
+  border-radius: 8px;
+  margin-right: 16px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.checkbox-wrapper:checked + label::before {
+  width: 24px;
+  height: 24px;
+  background-color: #ffffff;
+  background-image: url('./icon.svg');
+}
+
+.radio-wrapper input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.radio-wrapper label {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #666666;
+  user-select: none;
+}
+
+.radio-wrapper span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 24px;
+  width: 24px;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 32px;
+}
+
+.radio-wrapper span:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.radio-wrapper label input:checked ~ span:after {
+  display: block;
+}
+
+.radio-wrapper label span:after {
+  width: 12px;
+  height: 12px;
+  left: 5px;
+  top: 5px;
+  background: #7a5cfa;
+  border-radius: 32px;
+}
+
+.form__select {
+  margin-bottom: 200px;
+}
+
+.select__list {
+  width: 100%;
+  background: #ffffff;
+  border: 2px solid #7a5cfa;
+  border-radius: 8px 8px 0px 0px;
+  padding: 16px;
+}
+
+/* ButtonForm */
+
+.form__buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button__cancel {
+  background: #ffffff;
+  border: 1px solid #7a5cfa;
+  border-radius: 8px;
+  width: 172px;
+  height: 56px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #7a5cfa;
+}
+
+.button__next {
+  width: 172px;
+  height: 56px;
+  background: #7a5cfa;
+  border-radius: 8px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.button__cancel,
+.button__next:hover {
+  cursor: pointer;
+}
+
+/* Button OFF */
+
+.toggle-button {
+  position: relative;
+  width: 49px;
+  height: 24px;
+  margin: 0;
+  vertical-align: top;
+  background: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 32px;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
+  margin-right: 16px;
+}
+
+.toggle-button::after {
+  content: '';
+  position: absolute;
+  left: 3px;
+  top: 1.5px;
+  width: 18px;
+  height: 18px;
+  background: #f4f4f4;
+  border-radius: 50%;
+  transform: translateX(0);
+  transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
+}
+
+.toggle-button:checked::after {
+  transform: translateX(calc(100% + 3px));
+  background-color: #fff;
+}
+
+.toggle-button:checked {
+  background-color: #7a5cfa;
+}
+
+.error__message {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #666666;
 }
